2-sg-alb.tf
# # creating security group for ELB
# resource "aws_security_group" "demosg" {
#   name        = "Demo Security Group "
#   description = "Demo Module"
#   vpc_id      = aws_vpc.demovpc.id
#   dynamic "ingress" {
#     for_each = [22, 80, 81, 8080, 443]
#     iterator = port
#     content {
#       description = "TLS from VPC"
#       from_port   = port.value
#       to_port     = port.value
#       protocol    = "tcp"
#       cidr_blocks = ["0.0.0.0/0"]
#     }
#   }
#   egress {
#     from_port   = 0
#     to_port     = 0
#     protocol    = "-1"
#     cidr_blocks = ["0.0.0.0/0"]
#   }
#   tags = {
#     Name = "ec2-SG"
#   }
# }


# Creating Security Group for ALB
resource "aws_security_group" "demosg-alb" {
  name        = "Demo Security Group for alb"
  description = "Demo Module"
  vpc_id      = aws_vpc.demovpc.id

  # Inbound Rules
  # HTTP access from anywhere
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # HTTPS access from anywhere
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # SSH access from anywhere
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Outbound Rules
  # Internet access to anywhere
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
